--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     hello 4
+    <input type="text" id="url-input">
+    <button id="download-button">Download</button>
     <script src="index.js" defer type="module"></script>
 </body>
 </html>
