--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YT-2-MP3</title>
+    <style>
+        #url-input {
+            display: block;
+            padding: 4px;
+            width: 300px;
+            margin-bottom: 1rem;
+        }
+    </style>
 </head>
 <body>
-    hello 4
     <input type="text" id="url-input">
     <button id="download-button">Download</button>
     <script src="index.js" defer type="module"></script>
